--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,57 @@
-.App {
+* {
+  box-sizing: border-box;
+}
+
+.main-content {
+  display: flex;
+  size: 100vh;
+}
+
+.sidebar {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  width: 8vw;
+  justify-content: center;
+  background: linear-gradient(100deg, #CCB3D1, #752e8f);
+}
+
+.buttons {
+  display: flex;
+  flex-direction: column;
+}
+
+.account {
+  display: flex;
+  flex-direction: column;
+}
+
+.sidebar-header {
+  font-size: 12px;
+}
+
+.app {
+  display: flex;
+  flex-direction: column;
   text-align: center;
+}
+
+.app-item {
+  width: 100vw;
+}
+
+.header-title {
+  font-size: 50px;
+}
+
+.board {
+  background: blue;
+  padding: 10vh 10vw;
+}
+
+.footer-title {
+  font-size: 20px;
 }
