--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,35 +1,11 @@
 * {
   box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif
 }
 
 .main-content {
   display: flex;
   size: 100vh;
-}
-
-.sidebar {
-  position: absolute;
-  top: 0;
-  left: 0;
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-  width: 8vw;
-  justify-content: center;
-  background: linear-gradient(100deg, #CCB3D1, #752e8f);
-}
-
-.sidebar-item {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin: 25vh 0;
-}
-
-.sidebar-header {
-  font-size: 12px;
-  margin: 2vh 0;
 }
 
 .app {
@@ -40,17 +16,4 @@
 
 .app-item {
   width: 100vw;
-}
-
-.header-title {
-  font-size: 50px;
-}
-
-.board {
-  background: blue;
-  padding: 10vh 10vw;
-}
-
-.footer-title {
-  font-size: 20px;
 }
