--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,11 +1,17 @@
 * {
   box-sizing: border-box;
-  font-family: Arial, Helvetica, sans-serif
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
 }
 
 .main-content {
   display: flex;
-  size: 100vh;
+  height: 100vh;
+  width: 100vw;
+  background-image: url("../public/images/background.jpg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .app {
@@ -16,4 +22,5 @@
 
 .app-item {
   width: 100vw;
+  padding: 2vh 0;
 }
