--- a/client/src/components/Sidebar.css
+++ b/client/src/components/Sidebar.css
@@ -7,7 +7,7 @@
     height: 100vh;
     width: 8vw;
     justify-content: center;
-    background: linear-gradient(100deg, #CCB3D1, #752e8f);
+    backdrop-filter: sepia(80%);
   }
 
 .sidebar-item {
